Fixed reCaptcha alignment issue

--- a/board/static/css/write.scss
+++ b/board/static/css/write.scss
@@ -58,7 +58,7 @@
 		}
 
 		.g-recaptcha { margin:10px 0 5px; text-align:center; }
-		.g-recaptcha > div > div { display:inline-block; }
+		.g-recaptcha > div { display:inline-block; }
 		.errorlist + .footer { margin-top:20px; }
 
 		.footer {
